<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        style="@style/TableStyle"
        android:text="@string/v"/>

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        style="@style/TableStyle"
        android:text="@string/s" />

    <TextView
        android:id="@+id/tv_count_fuel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        style="@style/TableStyle"
        android:text="@string/q" />

    <TextView
        android:id="@+id/tv_fuel_consumption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:ellipsize="end"
        style="@style/TableStyle"
        android:text="@string/q100" />

</LinearLayout>