<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDE8E4"
    android:orientation="vertical"
    tools:context=".presentation.ui.WelcomeFragment">

    <TextView
        android:id="@+id/tv_hint_start_page"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="38dp"
        android:text="@string/start_page_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tl_input_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_start_page" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_input_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:boxBackgroundColor="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:hintEnabled="false"
        app:helperText="@string/helper_recommend_speed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:paddingVertical="30dp"
            android:hint="@string/hint_recommended_speed"
            android:maxLines="1"
            android:maxLength="3"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_start_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lets_go"
        style="@style/ButtonCustomStyle"
        android:paddingVertical="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tl_input_speed"
        app:layout_constraintStart_toStartOf="@+id/tl_input_speed"
        app:layout_constraintTop_toBottomOf="@+id/tl_input_speed" />
</androidx.constraintlayout.widget.ConstraintLayout>