<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDE8E4"
    tools:context=".presentation.ui.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="35dp"
            android:text="@string/txt_recommended_speed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_recommend_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="35dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            tools:text="60" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fuel_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxBackgroundColor="@color/white"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_recommended_fuel"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="5" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_fill_fuel"
                style="@style/ButtonCustomStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:paddingVertical="24dp"
                android:text="@string/fill_fuel" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_stats"
            style="@style/ButtonCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="24dp"
            android:paddingVertical="15dp"
            android:text="@string/stats" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start_travel"
        style="@style/ButtonCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="35dp"
        android:text="@string/start_travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>