<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDE8E4"
    tools:context=".presentation.ui.WorkingFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottom_view_working"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="35dp"
            android:text="@string/current_speed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_current_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:layout_marginTop="35dp"
            android:text="-"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_speed_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_up"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_speed_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_speed_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_normal"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_speed_slower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_slower"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/tv_speed_normal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.golandcoinc.diplomjobapplication.presentation.custom_view.SpeedDetectorView
                android:id="@+id/view_speed_detector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottom_view_working"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_finish_trip"
        style="@style/ButtonCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="35dp"
        android:text="@string/end_travel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>